--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0-rc02'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.pm10:indicator:1.0.2'
     testImplementation 'junit:junit:4.12'
