--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.thebluealliance:spectrum:0.7.1'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.pm10:indicator:1.0.2'
