--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.tyoj.dcalimi">
+    package="dev.jun0.dcalimi">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeGreen">
 
-        <activity android:name="me.tyoj.dcalimi.SplashActivity"
+        <activity android:name="dev.jun0.dcalimi.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="me.tyoj.dcalimi.MainActivity"
+        <activity android:name="dev.jun0.dcalimi.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
     </application>
 
