게시판 기초 작업 및 오픈소스 라이센스 추가, FCM 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
 
         <activity android:name="dev.jun0.dcalimi.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
+
+        <activity android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
+            android:theme="@style/AppThemeDefault" />
+
+        <activity android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
+            android:theme="@style/AppThemeDefault" />
     </application>
 
 </manifest>
