--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeGreen">
 
-        <activity android:name="dev.jun0.dcalimi.SplashActivity"
+        <activity android:name="dev.jun0.dcalimi.activity.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="dev.jun0.dcalimi.MainActivity"
+        <activity android:name="dev.jun0.dcalimi.activity.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <activity android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
