액티비티 재생성시 Fragment 유지 안되는 버그 수정 (SavedInstanceState 관련)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="dev.jun0.dcalimi.activity.MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity android:name="dev.jun0.dcalimi.activity.MainActivity" />
 
         <activity android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
             android:theme="@style/AppThemeDefault" />
