--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,17 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeGreen">
-
-        <activity android:name="dev.jun0.dcalimi.activity.SplashActivity"
+        android:theme="@style/AppThemeGreen"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activity.CreatePostActivity" />
+        <activity
+            android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,13 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="dev.jun0.dcalimi.activity.MainActivity" />
-
-        <activity android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
+        <activity android:name=".activity.MainActivity" />
+        <activity
+            android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
             android:theme="@style/AppThemeDefault" />
-
-        <activity android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
+        <activity
+            android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
             android:theme="@style/AppThemeDefault" />
     </application>
 
